section 21 until video 18

--- a/src/app/maps/pages/marker/marker.component.html
+++ b/src/app/maps/pages/marker/marker.component.html
@@ -1,1 +1,15 @@
-<p>marker works!</p>
+<ul class="list-group">
+    <li class="list-group-item list-group-item-info"
+        (click)="addMarker()">
+        + Agregar
+    </li>
+    <li *ngFor="let marker of markers; let i = index" 
+         class="list-group-item"
+         [ngStyle]="{
+             'background-color': marker.color
+         }"
+         (click)="goToMarker(marker.marker)">
+        Marker {{i+1}}
+    </li>
+</ul>
+<div #map class="map-container"></div>
