--- a/src/app/maps/pages/marker/marker.component.html
+++ b/src/app/maps/pages/marker/marker.component.html
@@ -8,7 +8,8 @@
          [ngStyle]="{
              'background-color': marker.color
          }"
-         (click)="goToMarker(marker.marker)">
+         (click)="goToMarker(marker.marker!)"
+         (dblclick)="deleteMarker(i)">
         Marker {{i+1}}
     </li>
 </ul>
