--- a/src/app/maps/pages/property/property.component.html
+++ b/src/app/maps/pages/property/property.component.html
@@ -1,1 +1,23 @@
-<p>property works!</p>
+<div class="row mt-3">
+    <div class="col-2"></div>
+        <div class="col">
+            <h1>Lista de propiedades</h1>
+            <hr>
+        </div> 
+</div>
+<div class="row container">
+    <div class="col-2"></div>
+    <div class="col">
+        <div class="row">
+            <div class="col-4 mb-2" *ngFor="let property of properties">
+                <div class="card">                   
+                    <app-mini-map [lngLat]="property.lngLat" class="card-img-top"></app-mini-map>                    
+                    <div class="card-body">
+                        <h5 class="card-titile">{{property.title}}</h5>
+                        <p class="card-text">{{property.description}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
